Main photo reflection; Slider text smaller on mobile; self-portrait link fixed; cannot vertically center contact page yet

--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -943,7 +943,7 @@ transition-delay:.2s;
 }
 
 .carousel-caption {
-    font-size: 24px;
+    font-size: 2em;
 }
 
 @media (min-width: 768px) {
